OLD/tests/expects/return_type_failure/test_wrong_return_type.expect
error: Return type mismatch
  --> return_type_failure/test_wrong_return_type.truk:2:5
  |
1 | fn get_number() : i32 {
2 |     return "not a number";
  |     ^
3 | }
  |

Compilation failed with 1 error(s)
